force-app/main/default/objects/Supplier__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supplier</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>