force-app/main/default/objects/Supplier__c/fields/BankAccountNo__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNo__c</fullName>
    <label>Bank Account No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>