force-app/main/default/objects/Supplier__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>Bank Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>