force-app/main/default/objects/Supplier__c/fields/BusinessKind__c.field-meta.xml
<CustomField>
    <fullName>BusinessKind__c</fullName>
    <label>Business Kind</label>
    <length>200</length>
    <type>Text</type>
</CustomField>