force-app/main/default/objects/Supplier__c/fields/CompanyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegistrationNumber__c</fullName>
    <label>Company Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>