force-app/main/default/objects/Supplier__c/fields/CorporationNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporationNumber__c</fullName>
    <label>Corporation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>