force-app/main/default/objects/Supplier__c/fields/CreditRating__c.field-meta.xml
<CustomField>
    <fullName>CreditRating__c</fullName>
    <label>Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>