force-app/main/default/objects/Supplier__c/fields/DateStarted__c.field-meta.xml
<CustomField>
    <fullName>DateStarted__c</fullName>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>