force-app/main/default/objects/Supplier__c/fields/DriectDelivery__c.field-meta.xml
<CustomField>
    <fullName>DriectDelivery__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Driect Delivery</label>
    <type>Checkbox</type>
</CustomField>