force-app/main/default/objects/Supplier__c/fields/ESGFlag__c.field-meta.xml
<CustomField>
    <fullName>ESGFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESG Flag</label>
    <type>Checkbox</type>
</CustomField>