force-app/main/default/objects/Supplier__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;GradeA</fullName>
            </value>
            <value>
                <fullName>GradeB</fullName>
            </value>
            <value>
                <fullName>GradeC</fullName>
            </value>
            <value>
                <fullName>GradeD</fullName>
            </value>
            <value>
                <fullName>GradeE</fullName>
            </value>
            <value>
                <fullName>GradeF</fullName>
            </value>
            <value>
                <fullName>GradeG</fullName>
            </value>
            <value>
                <fullName>GradeH</fullName>
            </value>
            <value>
                <fullName>GradeI</fullName>
            </value>
            <value>
                <fullName>GradeJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>