force-app/main/default/objects/Supplier__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Flag</label>
    <type>Checkbox</type>
</CustomField>