force-app/main/default/objects/Supplier__c/fields/MainProduct__c.field-meta.xml
<CustomField>
    <fullName>MainProduct__c</fullName>
    <label>Main Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>