force-app/main/default/objects/Supplier__c/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <label>Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>