force-app/main/default/objects/Supplier__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipName>supplierbkfp</relationshipName>
    <type>Lookup</type>
</CustomField>