force-app/main/default/objects/Supplier__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L/C</fullName>
            </value>
            <value>
                <fullName>D/P</fullName>
            </value>
            <value>
                <fullName>T/T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>