force-app/main/default/objects/Supplier__c/fields/PurchaseManager__c.field-meta.xml
<CustomField>
    <fullName>PurchaseManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>