force-app/main/default/objects/Supplier__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>Seoul</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Gyeonggi</fullName>
            </value>
            <value>
                <fullName>Incheon</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Gangwon</fullName>
            </value>
            <value>
                <fullName>Youngnam</fullName>
            </value>
            <value>
                <fullName>Honam</fullName>
            </value>
            <value>
                <fullName>Jeju</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>