force-app/main/default/objects/Supplier__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Registration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>