force-app/main/default/objects/Supplier__c/fields/RepresentativeEng__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeEng__c</fullName>
    <label>Representative Name(Eng)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>