force-app/main/default/objects/Supplier__c/fields/SelfDisposal__c.field-meta.xml
<CustomField>
    <fullName>SelfDisposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Disposal</label>
    <type>Checkbox</type>
</CustomField>