force-app/main/default/objects/Supplier__c/fields/SettleUpType__c.field-meta.xml
<CustomField>
    <fullName>SettleUpType__c</fullName>
    <label>Settle Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day1st</fullName>
            </value>
            <value>
                <fullName>Day15th</fullName>
            </value>
            <value>
                <fullName>DayLast</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>