force-app/main/default/objects/Supplier__c/fields/SourcingGroup__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group</label>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipName>Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>