force-app/main/default/objects/Supplier__c/fields/SupplierCode__c.field-meta.xml
<CustomField>
    <fullName>SupplierCode__c</fullName>
    <label>Supplier Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>