force-app/main/default/objects/Supplier__c/fields/SupplierGrade__c.field-meta.xml
<CustomField>
    <fullName>SupplierGrade__c</fullName>
    <label>Supplier Grade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>