force-app/main/default/objects/Supplier__c/fields/SupplierType__c.field-meta.xml
<CustomField>
    <fullName>SupplierType__c</fullName>
    <label>Supplier Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>