force-app/main/default/objects/Supplier__c/fields/TermAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>TermAgreementDate__c</fullName>
    <label>Term Agreement Date</label>
    <type>Date</type>
</CustomField>