force-app/main/default/objects/Supplier__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreliminaryPartner</fullName>
                <label>Preliminary Partner</label>
            </value>
            <value>
                <fullName>BusinessPartner</fullName>
                <label>Business Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>