force-app/main/default/objects/Supplier__c/fields/TypeOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>TypeOfBusiness__c</fullName>
    <label>Type Of Business</label>
    <length>60</length>
    <type>Text</type>
</CustomField>