force-app/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameEng__c</columns>
    <columns>CompanyRegistrationNumber__c</columns>
    <columns>CorporationNumber__c</columns>
    <columns>Representative__c</columns>
    <columns>RepresentativeEng__c</columns>
    <columns>SupplierGrade__c</columns>
    <columns>Type__c</columns>
    <columns>TypeOfBusiness__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>PaymentMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>